<resources>

    <string name="app_name">Food Junction</string>
    <string name="food_junction">Food Junction</string>
    <string name="icon">icon</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_name">Food Name</string>
    <string name="RupeeSymbol">₹</string>
    <string name="Price">Price</string>
    <string name="click_to_remove_the_item">click to remove the item.</string>
    <string name="less_quantity">less quantity</string>
    <string name="increase_quantity">Increase quantity</string>
</resources>