<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#17090809">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/icon"
                    app:srcCompat="@drawable/icon"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/titlelogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center"
                    android:text="@string/food_junction"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn_gradient"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/signupBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_gradient"
                    android:text="@string/sign_up" />

                <TextView
                    android:id="@+id/skipBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center"
                    android:text="@string/skip"
                    android:textAllCaps="true"
                    android:textColor="#ECE8E8"
                    android:textSize="20sp" />
            </LinearLayout>


    </LinearLayout>

    </ScrollView>

</RelativeLayout>