<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/order_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/Quantity_container"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/add_subtract_desgin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/subtract_btn_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/less_quantity"
                    android:src="@drawable/subtract"
                    app:srcCompat="@drawable/subtract" />

                <TextView
                    android:id="@+id/quantity_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text=""

                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/add_btn_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/increase_quantity"
                    android:src="@drawable/addd"
                    app:srcCompat="@drawable/addd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RupeeSymbol"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/order_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Price"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/removeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:contentDescription="@string/click_to_remove_the_item"
                    android:src="@drawable/ic_remove_btn"
                    tools:ignore="RedundantDescriptionCheck" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/order_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:src="@drawable/food1"
                app:civ_border_color="#9F7272"
                app:civ_border_width="2dp" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="#C3BCBC"
        app:layout_constraintBottom_toTopOf="@+id/order_now_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
        app:layout_constraintVertical_bias="1.0" />

</LinearLayout>